--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   video_player: 2.4.10
   visibility_detector: 0.3.3
   go_router: ^6.0.9
+  camera: ^0.10.3
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
